# Walrus

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  config.default.json  docker-compose.yml  run.sh
.cache/clangd/index/: argparse.hpp.5EC6BD4600F83497.idx  builtin-features.cpp.CBF9F8A758F6CFDF.idx  builtin-features.inc.2E20260C8912A634.idx  containers.cpp.AC7E87D92A51EABD.idx  containers.h.AF956B1D5609CBFC.idx  dice.cpp.9F75C0104E3E8C0F.idx  dice.hpp.755A60A7CCE3496B.idx  functions.cpp.AB9DEE02E78F28C7.idx  functions.h.674A9D1F18C7453F.idx  functions.inc.5E86526D396B4B3C.idx  main.cpp.DC9C5E66878EF2C8.idx  operations.inc.B35236B2177DCE86.idx  packToken.cpp.76333972B0214C1A.idx  packToken.h.EFA97833B9720AD6.idx  reservedWords.inc.66032075B59008EC.idx  roll_engine.cpp.38AF899FD3210F0B.idx  roll_engine.hpp.9B0D50D4E343F334.idx  shunting-yard-exceptions.h.47AA737A69BE2583.idx  shunting-yard.cpp.A6150B74B711F61D.idx  shunting-yard.h.B3B5ECA428AAF35A.idx  typeSpecificFunctions.inc.6C6F647BA7A2D3EA.idx
cmake/: FindDPP.cmake
include/: dice.hpp  initiative.hpp  list.hpp  roll_engine.hpp
src/: dice.cpp  initiative.cpp  list.cpp  main.cpp  roll_engine.cpp
src/cparse/: builtin-features.cpp  containers.cpp  functions.cpp  packToken.cpp  shunting-yard.cpp
